--- a/Space tourism multi-page website/space_space.css
+++ b/Space tourism multi-page website/space_space.css
@@ -444,6 +444,293 @@ body{
 /*////////////////////////////responsive design//////////////////*/
 
 @media all and (max-width: 1222px){
+    
+    body {
+        background-image: url(background-home-mobile.jpg);
+        background-repeat: no-repeat;
+        background-size: 120%, 100%;
+    }
+    .menuLogo {
+        margin-top: 43px;
+        margin-left: 84px;
+    }
+    .hamburger {
+        width: 10%;
+        height: 26px;
+        z-index: 1;
+        margin-top: 21px;
+        display: block;
+        margin-right: 70px;
+    }
+
+    .imageContent {
+        width: 100%;
+        color: white;
+        margin-top: 278px;
+        height: 440px;
+    }
+    .responsiveMenu {
+        width: 100%;
+        height: 719px;
+        background-image: url(background-home-mobile.jpg);
+        background-size: 99% 696px;
+        background-repeat: no-repeat;
+        z-index: 3;
+        position: fixed;
+        display: none;
+    }
+    .homeResponsive, .destinationResponsive, .crewResponsive, .technologieResponsive {
+        margin: 31px;
+        font-size: 30px;
+    }
+    .responsiveMenu img {
+        width: 9%;
+        height: 11%;
+        margin-left: 81%;
+        margin-top: 40px;
+    }
+    .secondPage {
+        display: none;
+        flex-direction: column;
+        justify-content: space-between;
+        margin-top: 158px;
+    }
+    .planet {
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+        height: 615px;
+    }
+
+    .planetText {
+        width: 80%;
+        height: 650px;
+        display: flex;
+        flex-direction: column;
+        margin-top: 80px;
+        margin-left: 179px;
+    }
+    .planetTitel {
+        width: 100%;
+        height: 70px;
+        color: white;
+        display: flex;
+        flex-direction: row;
+        margin-left: 123px;
+        font-size: 37px;
+    }
+    .planetImage {
+        width: 70%;
+        height: 421px;
+        margin-left: 191px;
+        margin-top: 91px;
+    }
+    
+
+    .planetText .text {
+        width: 68%;
+        height: 20%;
+        color: white;
+        margin-top: 76px;
+        font-size: 22px;
+    }
+
+    .planetText .additions {
+        width: 60%;
+        height: 13%;
+        display: flex;
+        flex-direction: row;
+        color: white;
+        margin-top: 79px;
+        text-align: center;
+    }
+    .subMenu {
+        width: 66%;
+        height: 10%;
+        display: flex;
+        flex-direction: row;
+        color: white;
+        font-size: 30px;
+    }
+
+    .mainTitel {
+        width: 60%;
+        height: 15%;
+        color: white;
+        font-size: 137px;
+    }
+    .imageContent .buttonExplore {
+        width: 30%;
+        height: 244px;
+        background-color: white;
+        color: navy;
+        border-radius: 50%;
+        font-size: 24px;
+    }
+    .menuNavigation {
+        display: none;
+    }
+
+    .menubar img {
+        width: 100%;
+        height: 68px;
+    }
+
+    .firstPage {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+    }
+    .textContent {
+        width: 54%;
+        color: white;
+        margin-top: 206px;
+        margin-left: 162px;
+        display: flex;
+        flex-direction: column;
+    }
+    .spaceTitel {
+        font-stretch: extra-expanded;
+        letter-spacing: 6px;
+        font-size: 34px;
+        margin-top: 30px;
+        width: 119%;
+    }
+
+    .spacetext {
+        font-size: 159px;
+        font-stretch: extra-expanded;
+        letter-spacing: 15px;
+        height: 170px;
+        margin-top: -1px;
+    }
+
+    .textContentText {
+        font-size: 29px;
+        margin-top: 47px;
+        margin-right: 27px;
+        padding-right: 20px;
+        height: 130px;
+        letter-spacing: 1px;
+        width: 125%;
+    }
+    .thirdPage {
+        display: none;
+        flex-direction: column;
+        margin-top: 169px;
+        color: white;
+    }
+    .crewDescription {
+        display: flex;
+        flex-direction: column;
+        width: 90%;
+        margin-left: 30px;
+    }
+    .crewTitel {
+        width: 85%;
+        height: 70px;
+        color: white;
+        display: flex;
+        flex-direction: row;
+        margin-left: 130px;
+        font-size: 41px;
+    }
+    .crewDescription {
+        display: flex;
+        flex-direction: column;
+        width: 90%;
+        margin-left: 30px;
+    }
+    .flight_ingenieur {
+        font-size: 38px;
+        text-transform: uppercase;
+        letter-spacing: 1px;
+    }
+    .Anousheh_Ansari {
+        margin-top: 20px;
+        font-size: 54px;
+        text-transform: uppercase;
+        font-stretch: extra-expanded;
+        letter-spacing: 2px;
+        height: 50px;
+    }
+    .crewtext .text {
+        margin-top: 101px;
+        width: 75%;
+        font-size: 21px;
+    }
+    .radioManu {
+        display: flex;
+        flex-direction: row;
+        margin-top: 110px;
+        height: 80px;
+        margin-left: 335px;
+    }
+    .imagActor {
+        margin-top: 10px;
+        margin-left: 118px;
+    }
+
+    .fourPage {
+        display: none;
+        flex-direction: column;
+        color: white;
+        justify-content: space-between;
+        margin-top: 169px;
+    }
+    .technololgieDescription, .technologieImage {
+        display: flex;
+        width: 66%;
+        height: 650px;
+        margin-top: 45px;
+        font-size: 35px;
+    }
+
+    .technologieTitel {
+        margin-left: 194px;
+    }
+    .technologiecontainMenu {
+        width: 255%;
+        margin-left: 104px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .technologiecontainText {
+        margin-top: 35px;
+        margin-right: 50px;
+        margin-left: 14px;
+    }
+    .technologiecontainTextTechnologie {
+        letter-spacing: 2px;
+        width: 136%;
+        margin-left: 40px;
+    }
+
+    .technologiecontainTextTitel {
+        letter-spacing: 5px;
+        font-size: 50px;
+        text-transform: uppercase;
+        margin-top: 5px;
+        margin-bottom: 20px;
+        width: 196%;
+        margin-left: 40px;
+    }
+    .technologiecontainTextTitelText {
+        margin-right: 0px;
+        font-size: 21px;
+        text-align: justify;
+        width: 141%;
+        margin-left: 40px;
+    }
+    .image-launch-vehicle-portrait {
+        width: 100%;
+        height: 70%;
+        margin-top: -68px;
+        margin-left: 169px;
+        margin-right: -136px;
+    } 
 
 }
 
