--- a/Space tourism multi-page website/space_space.css
+++ b/Space tourism multi-page website/space_space.css
@@ -1064,6 +1064,12 @@ body{
         margin-left: 169px;
         margin-right: -136px;
     }
+    
+     .mainContain {
+        display: block;
+        position: absolute;
+        height: 2000px;
+    }
    
 }
 
