--- a/stylesheet.css
+++ b/stylesheet.css
@@ -876,24 +876,23 @@ video{
         margin-left: 30px;
     }
 
-    
-
     .myWeaknesses {
-        display: flex;
-        flex-direction: column;
-        width: 84%;
-        margin-left: 20px;
-        margin-top: -66px;
-    }
+    display: flex;
+    flex-direction: column;
+    width: 84%;
+    margin-left: 35px;
+    margin-top: 26px;
+}
 
     .myAmbitions {
-        display: flex;
-        flex-direction: column;
-        width: 84%;
-        margin-left: 20px;
-        margin-right: 30px;
-        margin-top: 20px;
-    }
+    display: flex;
+    flex-direction: column;
+    width: 84%;
+    margin-left: 38px;
+    margin-right: 30px;
+    margin-top: 20px;
+}
+
     #collapsable-nav a{
         font-size: 1.2em;
     }
@@ -1216,7 +1215,7 @@ video{
         width: 100%;
         height: 100%;
     }
-    .multiSepForm, .homePage, .multiHomePage {
+    .slide {
         display: flex;
         flex-direction: column;
         height: 644px;
@@ -1245,6 +1244,7 @@ video{
         height: 80px;
         text-align: center;
         margin-left: 51px;
+        margin-top: -30px;
     }
 
     .col-md-6 {
@@ -1258,5 +1258,12 @@ video{
     #collapsable-nav a {
         font-size: 10px;
     }
+    .myWeaknesses {
+    display: flex;
+    flex-direction: column;
+    width: 84%;
+    margin-left: 35px;
+    margin-top: 26px;
+}
 
 }
