--- a/countriesDescription/countries.css
+++ b/countriesDescription/countries.css
@@ -156,3 +156,87 @@ img{
 .buttonBoders{
     margin: 10px;
 }
+
+/*////////////////// Responsive design//////*/
+@media all and (max-width: 1222px){
+
+}
+@media (min-width:641px) and (max-width:1222px){
+   
+}
+@media all and  (max-width:640px){
+    .inputSearch {
+        width: 40%;
+        padding: 6px;
+        height: 25px;
+        box-shadow: 2px 3px rgb(232, 235, 235);
+        border-radius: 6px;
+        display: flex;
+    }
+
+    .filterDiv {
+        display: flex;
+        flex-direction: column;
+        width: 63%;
+        margin-right: -87px;
+        font-size: 13px;
+        margin-top: -10px;
+    }
+
+    .countries {
+        width: 50%;
+        display: grid;
+        grid-template-columns: repeat(1, 1fr);
+        gap: 20px;
+        cursor: pointer;
+    }
+    .back {
+        width: 27%;
+        height: 20px;
+        padding: 15px;
+        box-shadow: 2px 3px rgb(232, 235, 235);
+        border-radius: 6px;
+        display: none;
+        cursor: pointer;
+    }
+    .countryFlagDetails img {
+        margin-top: 15px;
+        height: 32%;
+    }
+    .country-details-div {
+        display: flex;
+        flex-direction: column;
+        width: 90%;
+        height: 20%;
+        margin-top: -106px;
+        margin-left: 30px;
+    }
+    .countryFlagDetails img {
+        margin-top: 121px;
+    }
+    img {
+        width: 202%;
+    }
+
+    .description {
+        width: 100%;
+        height: 50%;
+        margin-top: 40px;
+    }
+    .descriptionCountryName {
+        font-weight: bolder;
+        padding-left: 120px;
+        margin-left: -28px;
+    }
+    .descriptionBorder {
+        padding-left: 1px;
+    }
+    .countryDivs {
+        padding: 15px;
+        border-radius: 6px;
+        text-align: center;
+        margin-left: -34px;
+        width: 63%;
+    }
+
+}
