--- a/stylesheet.css
+++ b/stylesheet.css
@@ -211,7 +211,7 @@ a .multiSepFomTitel , a .homePageTitel ,  a .multiHomePageTitel{
 /*//////// Slides//////////////////////////*/
 
     .slideConterner{
-        height: 1000px;
+        height: 0;
     }
  .slide{
             width: 80%;
@@ -234,6 +234,11 @@ a .multiSepFomTitel , a .homePageTitel ,  a .multiHomePageTitel{
             width: 50%;
             margin-right: 15px;
             margin-top: 15px;
+            transition: 0.5s;
+        }
+        .imageSlide:hover{
+            cursor: pointer;
+            transform: scale(1.05);
         }
         .whereInTheWorld{
             height: 300px;
@@ -247,9 +252,11 @@ a .multiSepFomTitel , a .homePageTitel ,  a .multiHomePageTitel{
             color: white; 
             padding: 8px 12px;
             font-family: Verdana, sans-serif;
+            margin-top: 10px;
         }
          .textSlide a{
-             color: white; 
+             color: white;
+             text-decoration: none; 
          }
         .dot {
             height: 15px;
@@ -259,7 +266,8 @@ a .multiSepFomTitel , a .homePageTitel ,  a .multiHomePageTitel{
             border-radius: 50%;
             display: inline-block;
             transition: background-color 0.6s ease;
-            margin-top: 20px;
+            margin-top: 600px;
+            
         }
 
         .active {
